Closed
Bug 422082
Opened 14 years ago
Closed 14 years ago
Crash reporter remains open after submitting data
Categories
(Toolkit :: Crash Reporting, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: nthomas, Assigned: ted)
References
Details
Attachments
(1 file)
1.53 KB,
patch
|
benjamin
:
review+
damons
:
approval1.9+
|
Details | Diff | Splinter Review |
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.4; en-US; rv:1.9b5pre) Gecko/2008031104 Minefield/3.0b5pre ID:2008031104 Steps: 1, Trigger crash (eg with Crash Me Now extension) 2, Leave default settings (in particular Submit to Mozilla is ticked) 3, Click on Restart Firefox button Expected results: Crash Reporter closes after submitting report Actual results: Crash Reporter stays open with text (to the effect of) crash submitted successfully. Maybe notification is good here, but it seems like it should auto close after a short time.
Assignee | ||
Comment 1•14 years ago
|
||
Fallout from bug 421841. My fault.
Assignee: nobody → ted.mielczarek
Blocks: 421841
Assignee | ||
Comment 2•14 years ago
|
||
Yeah, I told beltzner to make this change and it was wrong. shaver's right, we need to figure out how to unit test this.
Attachment #308609 -
Flags: review?(benjamin)
Updated•14 years ago
|
Attachment #308609 -
Flags: review?(benjamin) → review+
Assignee | ||
Updated•14 years ago
|
Attachment #308609 -
Flags: approval1.9?
Comment 3•14 years ago
|
||
Comment on attachment 308609 [details] [diff] [review] fix the method to be the right kind a1.9+=damons
Attachment #308609 -
Flags: approval1.9? → approval1.9+
Comment 4•14 years ago
|
||
We don't have to modify the calls to closeMeDown so that instead of sending withObject:nil they go back to sending withObject:self?
Assignee | ||
Comment 5•14 years ago
|
||
No, we're not actually using the parameter that's passed in, but ObjC expects the selector to take a single parameter. I tested this patch, it works. Checked in.
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•