bug 422082 - crash reporter remains open after submitting data. r=bsmedberg